--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "@sentry/react": "^9.33.0",
+    "@syncfusion/ej2-react-charts": "^30.1.37",
+    "clsx": "^2.1.1",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3"
+    "react-router": "^7.5.3",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
