--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@syncfusion/ej2-react-navigations": "^30.1.37",
     "@syncfusion/ej2-react-splitbuttons": "^30.1.37",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
