--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@syncfusion/ej2-react-maps": "^30.1.37",
     "@syncfusion/ej2-react-navigations": "^30.1.37",
     "@syncfusion/ej2-react-splitbuttons": "^30.1.37",
+    "appwrite": "^18.1.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "isbot": "^5.1.27",
