--- a/.env.local
+++ b/.env.local
@@ -6,4 +6,4 @@ VITE_APPWRITE_DATABASE_ID= 68672f13000b911326cb
 VITE_APPWRITE_USERS_COLLECTION_ID= 68672f6c0006878315af
 VITE_APPWRITE_TRIPS_COLLECTION_ID= 68672fa5001337766522
 
-VITE_APPWRITE_API_ENDPOINT= https://cloud.appwrite.io/v1 
+VITE_APPWRITE_API_ENDPOINT= https://nyc.cloud.appwrite.io/v1
